--- a/posts/2025-09-01-cl-dspy-modelling/2025-09-01-cl-dspy-modelling.ipynb
+++ b/posts/2025-09-01-cl-dspy-modelling/2025-09-01-cl-dspy-modelling.ipynb
@@ -96,67 +96,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The state of language models has significantly changed since the paper was released. It no longer makes sense to use the exact same model(s) as the paper.\n",
+    "We will consider the following _families_ of models:\n",
     "\n",
-    "Instead, we will use the following categories of model:\n",
+    "| Family | Rationale | Benchmarked Checkpoints |\n",
+    "|--------|-----------|-------------------------|\n",
+    "| **Non-Reasoning** | Classic next-token predictors. Useful as baselines for curriculum-learning because they expose the value of explicit reasoning. | • `openai/gpt-4.1-2025-04-14`  <br>• `openai/gpt-4.1-mini-2025-04-14` |\n",
+    "| **Reasoning** | Architected for multi-step, chain-of-thought inference. Expected to excel once the curriculum introduces compositional tasks. | • `openai/o4-mini-2025-04-16` <br>• `anthropic/claude-sonnet-4-20250514` <br>• `gemini-2.5-flash` <br>• `gemini-2.5-flash-lite` |\n",
+    "| **Frontier** | Flagship models from frontier labs. Highest quality but costly—kept only for upper-bound comparisons, not final deployment. | • `openai/o3-2025-04-16` <br>• `anthropic/claude-opus-4-20250514` <br>• `gemini-2.5-pro` |\n",
+    "| **Open-Source** | Critical for cost-sensitive deployments(an OS models FTW). Benchmarked to quantify the closed–open gap. | • `qwen3-32b` |\n",
     "\n",
-    "- **Non-Reasoning Models**\n",
-    "  - These models are the usual next-token prediction models, and start generating an answer immediately.\n",
-    "  - We will benchmark the following models here:\n",
-    "    - GPT-4.1\n",
-    "    - GPT-4.1-mini\n",
-    "- **Reasoning Models**\n",
-    "  - These models are the latest language models that are capable of reasoning and generating answers based on the context provided.\n",
-    "  - Reasoning models are designed to perform multi-step, explicit logical inference to arrive at a conclusion. \n",
-    "  - We will benchmark the following models here:\n",
-    "    - OAI o4-mini\n",
-    "    - Anthropic Sonnet 4.0\n",
-    "    - Google Gemini Flash 2.5\n",
-    "    - Google Gemini Flash 2.5 Lite\n",
-    "- **Frontier Models**\n",
-    "  - These are the true \"large\" language models, developed by frontier labs. They excel in instruction following, reasoning and solving a variety of tasks.\n",
-    "  - However, these models are _expensive_. As such, we will try to avoid using them for a final solution.\n",
-    "  - We will benchmark the following models here:\n",
-    "    - OAI o3\n",
-    "    - Anthropic Opus 4.0\n",
-    "    - Google Gemini Pro 2.5\n",
-    "- **Open Source**\n",
-    "  - We also want to measure the performance of open-source models, as it will help quantify the gap between them and proprietary models.\n",
-    "  - Open-source models are especially required in domains where data sovereignty is a concern.\n",
-    "  - We will only benchmark:\n",
-    "    - Qwen3-32B \n",
+    "### Two-Stage Gating Protocol\n",
     "\n",
+    "1. **Gate**  \n",
+    "   • Dataset: 50 “Easy” teacher-forced dialogues  \n",
+    "   • Retain a model only if **Turn-EM ≥ 0.55**\n",
     "\n",
-    "### Model Selection\n",
+    "2. **Probe**  \n",
+    "   • Dataset: 30 dialogues (15 Medium + 15 Hard), closed-loop  \n",
+    "   • Retain a model only if **Final-Turn EM ≥ 0.35** _and_ **Dialogue-mean EM ≥ 0.35**\n",
     "\n",
-    "Due to cost and time constraints, we can't afford to optimise all models. Hence, we'll aim to narrow down the list of models to a few \"promising\" models. Specifically, instead of just using the performance of the models on the \"easy\" validation set, we will use a combination of two datasets: \n",
+    "This pipeline quickly eliminates weak candidates while preserving models whose strengths surface in longer, reasoning-heavy contexts.\n",
     "\n",
-    "1. Gate - 50 Easy dialogs, teacher - forced. Drop model if Turn-EM < 0.55.\n",
-    "2. Probe - 30-dialog mixed micro-set (15 Medium + 15 Hard, closed loop).\n",
-    "   Keep model only if Final-Turn EM ≥ 0.35, Dialogue-mean EM ≥ 0.35\n",
+    "### Experiment Tracking\n",
     "\n",
-    "This two-stage filter zaps obviously weak models fast yet retains ones whose strength shows up on multi-step reasoning / long context.\n",
+    "All training and evaluation runs are logged with **MLflow**:\n",
     "\n",
-    "### Metrics Tracking\n",
-    "\n",
-    "Given that we plan on iterating over multiple datasets, multiple models, multiple algorithms with different hyperparameters, we will a solution to efficiency track our progress. \n",
-    "\n",
-    "We aim to use **MLFlow**, as it has the following features:\n",
-    "\n",
-    "- MLflow Tracking: logs training, runs, and artifacts for DSPy.\n",
-    "- MLflow Model: packages DSPy programs for reproducible deployment.\n",
-    "- MLflow Evaluate: natively evaluates GenAI outputs for fast iteration.\n",
-    "- MLflow Tracing: auto-logs and debugs DSPy internals with one command.\n",
+    "- MLflow Tracking – run metadata, metrics, and artifacts for DSPy experiments  \n",
+    "- MLflow Model – package DSPy programs for reproducible rollout  \n",
+    "- MLflow Evaluate – built-in GenAI evaluators for rapid iteration  \n",
+    "- MLflow Tracing – one-line capture of DSPy internals for debugging\n",
     "\n",
     "In production, the deployment pipeline would look as follows:\n",
     "\n",
-    "<p align=\"center\">\n",
-    "  <img src=\"../cl_dspy/mlflow_dspy.png\" alt=\"DSPy Production deployment with MLFlow. Source: DSPy Docs\" width=\"200\" height=\"300\"/>\n",
-    "  <br>\n",
-    "  <sub>\n",
-    "    DSPy Production deployment with MLFlow. Source: <a href=\"https://mlflow.org/docs/latest/genai/flavors/dspy/\">MLFlow Docs</a>\n",
-    "  </sub>\n",
-    "</p>\n"
+    "<p align=\"center\">,\n",
+    "  <img src=\"../cl_dspy/mlflow_dspy.png\" alt=\"DSPy Production deployment with MLFlow. Source: DSPy Docs\" width=\"200\" height=\"300\"/>,\n",
+    "  <br>,\n",
+    "  <sub>,\n",
+    "    DSPy Production deployment with MLFlow. Source: <a href=\"https://mlflow.org/docs/latest/genai/flavors/dspy/\">MLFlow Docs</a>,\n",
+    "  </sub>,\n",
+    "</p>\n",
+    "\n"
    ]
   },
   {
@@ -6552,14 +6531,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aha! We see that while the _predicted answer_ didnt match the ground truth exactly, it's **actually** correct for all these cases. We can further use these examples to improve our **exact match** metric implementation!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The above results are **not conclusive** by any means, since the LLM-as-a-judge approach also has known flaws. However, it does give us some pointers on how to improve the model performance from here!"
+    "Curriculum-first pass surfaced a gap between our metric and reality: several \"errors\" are actually correct answers hidden by formatting. Manual review shows many EM misses are due to surface form, not reasoning.\n",
+    "\n",
+    "**What broke EM**\n",
+    "\n",
+    "- Numeric formatting: thousands separators, “0.5M” vs “500000”.\n",
+    "- Units and scaling: $, %, M/B suffixes; percent vs decimal.\n",
+    "- Rounding/tolerance: 2dp rounding vs full precision.\n",
+    "- Boolean variants: yes/true/1 vs no/false/0.\n",
+    "\n",
+    "The above results are **not conclusive** by any means, since the LLM-as-a-judge approach also has known flaws. However, it does give us some pointers on how to improve the model performance from here!\n",
+    "\n",
+    "**Note**: LLM-as-judge remains imperfect. We’ll retain periodic human spot-checks. With cleaner metrics and logging, the next step is to test if DSPy’s optimizers actually lift EM under the Easy→Medium→Hard schedule without inflating token cost.\n"
    ]
   }
  ],
