Fix html for all posts

--- a/posts/2025-09-01-cl-dspy-modelling/2025-09-01-cl-dspy-modelling.ipynb
+++ b/posts/2025-09-01-cl-dspy-modelling/2025-09-01-cl-dspy-modelling.ipynb
@@ -8,7 +8,7 @@
     "title: \"Curriculum Learning 🤝 DSPy: Modelling\"\n",
     "author: Shubham Gupta\n",
     "date: '2025-09-01'\n",
-    "image: ../cl_dspy/curriculum_learning_data.png\n",
+    "image: ../cl_dspy/submission_mlflow_traces.png\n",
     "description: Mapping ConvFinQA and crafting a curriculum for financial QA\n",
     "lightbox: true\n",
     "toc: true\n",
@@ -6531,7 +6531,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Curriculum-first pass surfaced a gap between our metric and reality: several \"errors\" are actually correct answers hidden by formatting. Manual review shows many EM misses are due to surface form, not reasoning.\n",
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Curriculum-first pass surfaced a gap between our metric and reality. Several \"errors\" are actually correct answers hidden by formatting. Manual review shows many EM misses are due to surface form, not reasoning.\n",
+    "\n",
+    "There are also cases where the ground-truth in the dataset is incorrect.\n",
     "\n",
     "**What broke EM**\n",
     "\n",
