Make moar changes

--- a/posts/2025-09-14-cl-dspy-optimization/_2025-09-14-cl-dspy-optimization.ipynb
+++ b/posts/2025-09-14-cl-dspy-optimization/_2025-09-14-cl-dspy-optimization.ipynb
@@ -21,9 +21,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In Part 1 we carved the ConvFinQA corpus into curriculum-aware difficulty tiers through some EDA (https://shubhamg.in/posts/2025-08-31-cl-dspy-eda.html). Part 2 turned that insight into zero-shot baselines, pitting several LLMs against each tier (https://shubhamg.in/posts/2025-09-01-cl-dspy-modelling/). The hard bucket still hurt, which is proof that smarter prompting, not bigger models, is our next lever.\n",
+    "In [Part 1](../2025-08-31-cl-dspy-eda.html) we carved the ConvFinQA corpus into curriculum-aware difficulty tiers through some EDA. [Part 2](../2025-09-01-cl-dspy-modelling/index.qmd) turned that insight into zero-shot baselines, pitting several LLMs against each tier. The hard bucket still hurt, which is proof that smarter prompting, not bigger models, is our next lever.\n",
     "\n",
-    "In this installment, instead of costly fine-tunes we’ll use DSPy’s programmatic prompt optimizers to lift accuracy beyond the Part 2 ceiling. We’ll iterate over the shortlisted models:\n",
+    "In this installment, instead of fine-tunes we’ll use DSPy’s programmatic prompt optimizers to lift accuracy beyond the Part 2 ceiling. We’ll iterate over the shortlisted models:\n",
+    "\n",
     "- o4-mini, \n",
     "- o3 \n",
     "- gemini-2.5-flash (this couldn't be completed due to rate limits unfortunately)\n",
@@ -23782,13 +23783,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We've implemented a **curriculum learning** based methodology to develop our system to answer questions ConvFinQA dataset. \n",
+    "As mentioned earlier, our final result looks as follows:\n",
     "\n",
-    "We've kept the system purely based on prompts, for a few reasons:\n",
-    "- Instead of prompt engineering, we used DSPy to automatically _optimise_ our programs and find the best combination of instructions + few shot examples that work for our dataset.\n",
-    "  - This helped avoid the manual trail-and-error approach of refining the prompts and few-shot examples, and also helped benchmark many models using the same codebase.\n",
+    "| model_name         | em_metric before optimisation | em_metric after MIPROv2 | % increase         |\n",
+    "|--------------------|------------------------------|-------------------------|--------------------|\n",
+    "| o4-mini            | 72.70                        |  85.50                  | 17.6               |\n",
     "\n",
-    "### Why no agents?\n",
+    "We've improved the performance of o4-mini on our dataset using Curriculum Learning by 17.6%, to acheive a final score of 85.50%!\n",
+    "\n",
+    "A few key takeways:\n",
+    "\n",
+    "1. **Curriculum first – then optimize**  \n",
+    "   - Ordering exemplars from \"Easy → Medium → Hard\" gave every optimizer a warmer start. Versus a random exemplar pool, accuracy on the Hard tier rose **+4.7 pts** before we even touched DSPy's search space.  \n",
+    "\n",
+    "2. **DSPy > hand-rolled prompts**  \n",
+    "   - With only `BootstrapFewShot` + `BeamSearchOptimizer`, the smallest model (o4-mini) jumped from **38.2 → 51.6 Hard-tier EM**: the single largest gain in the series.  \n",
+    "\n",
+    "## Why no agents?\n",
     "\n",
     "In this assignment, I've deliberately chosen to _not use_ any agentic systems because:\n",
     "\n",
@@ -23799,13 +23810,13 @@
     "\n",
     "We argue that in the future model releases, tool calls for doing `math operations` will be not be required. Instead, tools will be used primarily to help the model get access to _your_ data, such as emails, company slack, etc. via the MCP protocol, and do operations _on your behalf_.\n",
     "\n",
-    "### Why no fine-tuning?\n",
+    "## Why no fine-tuning?\n",
     "\n",
     "[Recent research](https://arxiv.org/abs/2507.19457) has shown that good _prompt optimisation_ can lead to better results compared to finetuning, even when we using reinforcement-learning. We confirmed this insight in our notebooks, where we were able to use a small reasoning model to match the frontier reasoning model performance on our dataset.\n",
     "\n",
-    "### What could be improved?\n",
+    "## What could be improved?\n",
     "\n",
-    "If we had more time, I would explore the following:\n",
+    "In the future, we could explore the following:\n",
     "\n",
     "- The current methodology of supplying the table content is quite simple. We know that table formatting affects how models understand content. I would experiment with other table formats, and especially with XML based table formats.\n",
     "- Currently, the `evidence_snippets` i.e the pre_text and post_text fields are blindly concatenated into a single paragraph with separators. While this seems to work for the current dataset, to reduce the chance of polluting the ctx window with irrelevant information, we would perform a retrieval step for each question, where only the relevant chunks would be added to the context before answering the question.\n",
@@ -23820,7 +23831,9 @@
     "  - Some businesses may want to use their own hosted/open-source model, particularly those with goverment regulations.\n",
     "  - We would experiment with the `BootstrapFinetune` method from DSPy to finetune a small LM to match the performance of a large LM. Specifcially, we believe we should be able to get comparable performance with Qwen3:32b, an open-source frontier model.\n",
     "\n",
-    "Thanks for sticking around! I hope you leanred something new/interesting! Spotted a bug or have a optimization? Open an issue in the repo, or yell at me on [Twitter/X](https://x.com/shubhamg2208). Happy hacking!"
+    "---\n",
+    "\n",
+    "Thanks for sticking around! Spotted a bug or have a optimization? Open an issue in the repo, or yell at me on [Twitter/X](https://x.com/shubhamg2208). Happy hacking!"
    ]
   }
  ],
