Update taglm description

--- a/posts/2020-04-23-tag-lm.md
+++ b/posts/2020-04-23-tag-lm.md
@@ -9,6 +9,7 @@ categories:
 date: '2020-04-23'
 layout: post
 title: TagLM
+description: "Bidirectional LM embeddings for sequence tagging"
 toc: true
 
 ---
